update2 PR
Signed-off-by: PatriceKammognie <patrice.dzuguem@iese.fraunhofer.de>