@@ -55,19 +55,21 @@ import org.eclipse.digitaltwin.basyx.core.pagination.PaginationSupport;
 public class InMemoryConceptDescriptionRepository implements ConceptDescriptionRepository {
 
 	private Map<String, ConceptDescription> conceptDescriptions = new LinkedHashMap<>();
-	
+
 	private String cdRepositoryName;
 
 	/**
 	 * Creates the InMemoryConceptDescriptionRepository
 	 * 
 	 */
-	public InMemoryConceptDescriptionRepository() { }
-	
+	public InMemoryConceptDescriptionRepository() {
+	}
+
 	/**
 	 * Creates the InMemoryConceptDescriptionRepository
 	 * 
-	 * @param cdRepositoryName Name of the CDRepository
+	 * @param cdRepositoryName
+	 *            Name of the CDRepository
 	 */
 	public InMemoryConceptDescriptionRepository(String cdRepositoryName) {
 		this.cdRepositoryName = cdRepositoryName;
@@ -80,17 +82,20 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 	 * @param conceptDescriptions
 	 */
 	public InMemoryConceptDescriptionRepository(Collection<ConceptDescription> conceptDescriptions) {
+		throwIfMissingId(conceptDescriptions);
+
 		assertIdUniqueness(conceptDescriptions);
 
 		this.conceptDescriptions.putAll(mapConceptDescriptions(conceptDescriptions));
 	}
-	
+
 	/**
-	 * Creates the InMemoryConceptDescriptionRepository and preconfiguring
-	 * it with the passed ConceptDescriptions
+	 * Creates the InMemoryConceptDescriptionRepository and preconfiguring it with
+	 * the passed ConceptDescriptions
 	 * 
-	 * @param conceptDescriptions 
-	 * @param cdRepositoryName Name of the CDRepository
+	 * @param conceptDescriptions
+	 * @param cdRepositoryName
+	 *            Name of the CDRepository
 	 */
 	public InMemoryConceptDescriptionRepository(Collection<ConceptDescription> conceptDescriptions, String cdRepositoryName) {
 		this(conceptDescriptions);
@@ -99,9 +104,7 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 
 	@Override
 	public CursorResult<List<ConceptDescription>> getAllConceptDescriptions(PaginationInfo pInfo) {
-		List<ConceptDescription> conceptDescriptionList = conceptDescriptions.values()
-				.stream()
-				.collect(Collectors.toList());
+		List<ConceptDescription> conceptDescriptionList = conceptDescriptions.values().stream().collect(Collectors.toList());
 
 		CursorResult<List<ConceptDescription>> paginatedCD = paginateList(pInfo, conceptDescriptionList);
 		return paginatedCD;
@@ -109,26 +112,17 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 
 	@Override
 	public CursorResult<List<ConceptDescription>> getAllConceptDescriptionsByIdShort(String idShort, PaginationInfo pInfo) {
-		List<ConceptDescription> allDescriptions = conceptDescriptions.values()
-				.stream()
-				.collect(Collectors.toList());
+		List<ConceptDescription> allDescriptions = conceptDescriptions.values().stream().collect(Collectors.toList());
 
-		List<ConceptDescription> filtered = allDescriptions.stream()
-				.filter(conceptDescription -> conceptDescription.getIdShort()
-						.equals(idShort))
-				.collect(Collectors.toList());
+		List<ConceptDescription> filtered = allDescriptions.stream().filter(conceptDescription -> conceptDescription.getIdShort().equals(idShort)).collect(Collectors.toList());
 		CursorResult<List<ConceptDescription>> result = paginateList(pInfo, filtered);
 		return result;
 	}
 
 	@Override
 	public CursorResult<List<ConceptDescription>> getAllConceptDescriptionsByIsCaseOf(Reference reference, PaginationInfo pInfo) {
-		List<ConceptDescription> allDescriptions = conceptDescriptions.values()
-				.stream()
-				.collect(Collectors.toList());
-		List<ConceptDescription> filtered = allDescriptions.stream()
-				.filter(conceptDescription -> hasMatchingReference(conceptDescription, reference))
-				.collect(Collectors.toList());
+		List<ConceptDescription> allDescriptions = conceptDescriptions.values().stream().collect(Collectors.toList());
+		List<ConceptDescription> filtered = allDescriptions.stream().filter(conceptDescription -> hasMatchingReference(conceptDescription, reference)).collect(Collectors.toList());
 
 		CursorResult<List<ConceptDescription>> result = paginateList(pInfo, filtered);
 		return result;
@@ -136,13 +130,9 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 
 	@Override
 	public CursorResult<List<ConceptDescription>> getAllConceptDescriptionsByDataSpecificationReference(Reference reference, PaginationInfo pInfo) {
-		List<ConceptDescription> allDescriptions = conceptDescriptions.values()
-				.stream()
-				.collect(Collectors.toList());
+		List<ConceptDescription> allDescriptions = conceptDescriptions.values().stream().collect(Collectors.toList());
 
-		List<ConceptDescription> filtered = allDescriptions.stream()
-				.filter(conceptDescription -> hasMatchingDataSpecificationReference(conceptDescription, reference))
-				.collect(Collectors.toList());
+		List<ConceptDescription> filtered = allDescriptions.stream().filter(conceptDescription -> hasMatchingDataSpecificationReference(conceptDescription, reference)).collect(Collectors.toList());
 
 		CursorResult<List<ConceptDescription>> result = paginateList(pInfo, filtered);
 		return result;
@@ -165,8 +155,9 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 	}
 
 	@Override
-	public void createConceptDescription(ConceptDescription conceptDescription) throws CollidingIdentifierException,MissingIdentifierException {
+	public void createConceptDescription(ConceptDescription conceptDescription) throws CollidingIdentifierException, MissingIdentifierException {
 		throwIfConceptDescriptionIdEmptyOrNull(conceptDescription.getId());
+
 		throwIfConceptDescriptionExists(conceptDescription.getId());
 
 		conceptDescriptions.put(conceptDescription.getId(), conceptDescription);
@@ -178,7 +169,7 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 
 		conceptDescriptions.remove(conceptDescriptionId);
 	}
-	
+
 	@Override
 	public String getName() {
 		return cdRepositoryName == null ? ConceptDescriptionRepository.super.getName() : cdRepositoryName;
@@ -198,17 +189,24 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 	}
 
 	private Map<String, ConceptDescription> mapConceptDescriptions(Collection<ConceptDescription> conceptDescriptions) {
-		return conceptDescriptions.stream()
-				.collect(Collectors.toMap(ConceptDescription::getId, conceptDescription -> conceptDescription));
+		return conceptDescriptions.stream().collect(Collectors.toMap(ConceptDescription::getId, conceptDescription -> conceptDescription));
 	}
 
 	private void throwIfConceptDescriptionExists(String id) {
 		if (conceptDescriptions.containsKey(id))
 			throw new CollidingIdentifierException(id);
 	}
-	
+
+	private void throwIfMissingId(Collection<ConceptDescription> conceptDescriptionsToCheck) {
+		boolean isMissingId = conceptDescriptionsToCheck.stream().map(ConceptDescription::getId).anyMatch(id -> id == null || id.isBlank());
+
+		if (isMissingId) {
+			throw new MissingIdentifierException();
+		}
+	}
+
 	private void throwIfConceptDescriptionIdEmptyOrNull(String id) {
-		if(id == null || id.trim().isEmpty())
+		if (id == null || id.isBlank())
 			throw new MissingIdentifierException(id);
 	}
 
@@ -218,20 +216,13 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 	}
 
 	private boolean hasMatchingReference(ConceptDescription cd, Reference reference) {
-		Optional<Reference> optionalReference = cd.getIsCaseOf()
-				.stream()
-				.filter(ref -> ref.equals(reference))
-				.findAny();
+		Optional<Reference> optionalReference = cd.getIsCaseOf().stream().filter(ref -> ref.equals(reference)).findAny();
 
 		return optionalReference.isPresent();
 	}
 
 	private boolean hasMatchingDataSpecificationReference(ConceptDescription cd, Reference reference) {
-		Optional<EmbeddedDataSpecification> optionalReference = cd.getEmbeddedDataSpecifications()
-				.stream()
-				.filter(eds -> eds.getDataSpecification()
-						.equals(reference))
-				.findAny();
+		Optional<EmbeddedDataSpecification> optionalReference = cd.getEmbeddedDataSpecifications().stream().filter(eds -> eds.getDataSpecification().equals(reference)).findAny();
 
 		return optionalReference.isPresent();
 	}
@@ -244,8 +235,7 @@ public class InMemoryConceptDescriptionRepository implements ConceptDescriptionR
 	}
 
 	private CursorResult<List<ConceptDescription>> paginateList(PaginationInfo pInfo, List<ConceptDescription> conceptDescriptionList) {
-		TreeMap<String, ConceptDescription> cdMap = conceptDescriptionList.stream()
-				.collect(Collectors.toMap(ConceptDescription::getId, cd -> cd, (a, b) -> a, TreeMap::new));
+		TreeMap<String, ConceptDescription> cdMap = conceptDescriptionList.stream().collect(Collectors.toMap(ConceptDescription::getId, cd -> cd, (a, b) -> a, TreeMap::new));
 
 		PaginationSupport<ConceptDescription> paginationSupport = new PaginationSupport<>(cdMap, ConceptDescription::getId);
 		CursorResult<List<ConceptDescription>> paginatedCD = paginationSupport.getPaged(pInfo);
